JPublish 4 change log:
[2009.09.10]
  added support for the Content-Length response attribute

[2009.08.09]
  added generic RSS support. The demo provided (svn) is using a simple Beanshell action as a
  feed manager and the ROME framework for publishing the feed. RSS Domain modeling is in progress and a 
  new JPublish News Repository will follow shortly.

[2009.06.26]
  upgraded to Ehcache 1.6.0 (http://ehcache.sourceforge.net)
  re-factored the JPublish cache support for obtaining cache statistics (if supported)

[2009.05.28]
  upgraded JPublish RESTLET support to Noelios-Restlet-Engine/1.1.5

[2009.05.22]
  the response Content-Type will be calculated just before rendering the result and not before executing the
  actions. This will allow user modules to manipulate the response content type.


[2009.05.19]
  JPRestletModule can now be mapped on a list of paths.

  Example:
  <module classname="org.jpublish.module.restlet.JPRestletModule">
    <urls>
        <url>/rest/*</url>
        <url>/restful/*</url>
    </urls>
    <restlet-config>/WEB-INF/jprestlet-config.xml</restlet-config>
  </module>

  With a configuration like the one above, JPRestletModule will respond for any path starting with
  /rest/ or /restful/. This implementation is backward compliant.



[2009.04.30]
- supporting the request parameter 'format' (or any user defined parameter name) is now optional; disabled by default.
  To enable this support, add the following line to your jpublish.xml config file, excerpt:

       <formatChangeParameterName>format</formatChangeParameterName>

  If the above parameter is specified, the JPublish servlet will resolve the response ContentType based on
  the request.getParameter( "format") value or will fall back on checking the requested file extension, as usual.


[2009.04.28]
 - added few more default mime types
 - introduced the support for the "format" request parameter. The response.ContentType will